# speedchallenge

./: pyproject.toml
notebooks/: eda.ipynb
notebooks/.ipynb_checkpoints/: eda-checkpoint.ipynb
