[tool.poetry]
name = "internshippls"
version = "0.1.0"
description = "lets get an internship"
authors = ["Ryan Downing <ryansdowning1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.5"
pandas = "^1.2.0"
matplotlib = "^3.3.3"
seaborn = "^0.11.1"
opencv-python = "^4.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
